bindings/native/nclink_shim.h

/** 表头拼成一行（malloc，调用方释放）。 */
NCLSHIM_API char *nclshim_sample_header(const void *msg, const char *separator);
/** 某列的形态：槽位数、总点数、是否批量列、编码。 */
NCLSHIM_API int nclshim_sample_column_slots(const void *msg, int col);
NCLSHIM_API int nclshim_sample_column_points(const void *msg, int col);
NCLSHIM_API int nclshim_sample_column_nested(const void *msg, int col);
NCLSHIM_API const char *nclshim_sample_column_encoding(const void *msg, int col);
/** 按行读：第 row 行、第 col 列（借用；越界返回 NULL）。 */
NCLSHIM_API const void *nclshim_sample_value_at(const void *msg, int row, int col);
/** 列内扁平取值（借用）：只按该列自己的顺序，不跨列对齐。 */
NCLSHIM_API const void *nclshim_sample_column_value_at(const void *msg, int col,
                                                       int index);
/** 事件报文：id / time / key / value。 */
NCLSHIM_API const char *nclshim_event_id(const void *msg);
NCLSHIM_API const char *nclshim_event_time(const void *msg);
NCLSHIM_API const char *nclshim_event_key(const void *msg);
NCLSHIM_API const void *nclshim_event_value(const void *msg);
/** 进程级初始化：连 broker（用户名/密码可为 NULL）。 */
NCLSHIM_API int nclshim_open(const char *uri, const char *user, const char *pass);
/** 关掉连接与所有客户端。 */
NCLSHIM_API void nclshim_close(void);
NCLSHIM_API int nclshim_is_open(void);
/** 取（必要时创建）某个 SN 的设备客户端；借用，nclshim_close 后失效。 */
NCLSHIM_API const void *nclshim_client_get(const char *sn);
/** probe：拿模型。模型所有权交给调用方（nclshim_model_free）。 */
NCLSHIM_API int nclshim_client_probe(const void *client, unsigned timeout_ms,
                                     const void **out_model);
/** getValue(path, timeout)：值所有权交给调用方（nclshim_json_free）。 */
NCLSHIM_API int nclshim_client_get_value(const void *client, const char *path,
                                         unsigned timeout_ms, const void **out_json);
/** getValueRange(path, start, end, timeout)。 */
NCLSHIM_API int nclshim_client_get_value_range(const void *client, const char *path,
                                               int start, int end,
                                               unsigned timeout_ms,
                                               const void **out_json);
/** getLength(path, timeout)。 */
NCLSHIM_API int nclshim_client_get_length(const void *client, const char *path,
                                          unsigned timeout_ms, long long *out_length);
/** setValue(path, value, timeout)；value 是 JSON 文本。 */
NCLSHIM_API int nclshim_client_set_value(const void *client, const char *path,
                                         const char *value_json,
                                         unsigned timeout_ms);
/** setValue(path, value, index, timeout)。 */
NCLSHIM_API int nclshim_client_set_value_index(const void *client, const char *path,
                                               const char *value_json, int index,
                                               unsigned timeout_ms);
/**
 * 方法调用。method 形如 "/plc/setValue"（也接受 "plc/setValue"），params_json 可为
 * NULL；check=1 表示只校验参数、不执行。成功后 *out_json 收到**应答报文**的 JSON
 * 文本（code / params / data / reason），调用方用 nclshim_free 释放。
 */
NCLSHIM_API int nclshim_client_method_call(const void *client, const char *method,
                                           const char *params_json, int check,
                                           unsigned timeout_ms, char **out_json);
/** ping。 */
NCLSHIM_API int nclshim_client_ping(const void *client, unsigned timeout_ms);
/** 路径 ↔ 节点 id 互查（都是 malloc，调用方释放）。 */
NCLSHIM_API char *nclshim_client_get_id(const void *client, const char *path);
NCLSHIM_API char *nclshim_client_get_path(const void *client, const char *id);
/** 订阅采样；msg 只在回调期间有效。 */
NCLSHIM_API int nclshim_client_subscribe_samples(const void *client, int qos,
                                                 void *host);
NCLSHIM_API int nclshim_client_unsubscribe_samples(const void *client);
NCLSHIM_API int nclshim_client_subscribe_events(const void *client, int qos,
                                                void *host);
NCLSHIM_API int nclshim_client_unsubscribe_events(const void *client);
NCLSHIM_API int nclshim_client_sample_count(const void *client);
NCLSHIM_API int nclshim_client_event_count(const void *client);
/** 运行时加/删采样通道：config_json 是一个 SAMPLE_CHANNEL 配置节点。 */
NCLSHIM_API int nclshim_client_add_sample(const void *client, const char *config_json,
                                          unsigned timeout_ms);
NCLSHIM_API int nclshim_client_remove_sample(const void *client, const char *id,
                                             unsigned timeout_ms);
/**
 * 建一个设备端：模型默认走内置模型；broker_url 为空则**不接 MQTT**（离线使用
 * nclshim_server_dispatch() 驱动，或者自己给 publish_host 当传输）；
 * publish_host 非空的另一种用法是"自研传输"：每条出站报文都交给托管侧。
 *
 * 用户名/密码可为 NULL（匿名）。失败返回 NULL。
 */
NCLSHIM_API const void *nclshim_server_create(const char *sn, const char *model_json,
                                              const char *broker_url,
                                              const char *username,
                                              const char *password,
                                              void *publish_host);
/** 释放设备端：先停服务，再拆连接，最后放工具上下文。 */
NCLSHIM_API void nclshim_server_free(const void *handle);
NCLSHIM_API const char *nclshim_server_sn(const void *handle);
/** 设备模型（借用句柄，nclshim_node_* 都能用；服务器释放即失效）。 */
NCLSHIM_API const void *nclshim_server_model(const void *handle);
NCLSHIM_API char *nclshim_server_model_json(const void *handle);
NCLSHIM_API int nclshim_server_binding_count(const void *handle);
NCLSHIM_API int nclshim_server_operation_count(const void *handle);
NCLSHIM_API int nclshim_server_sample_count(const void *handle);
NCLSHIM_API int nclshim_server_sample_upload_count(const void *handle);
NCLSHIM_API int nclshim_server_event_count(const void *handle);
NCLSHIM_API char *nclshim_server_openapi_json(const void *handle, const char *base_url);
NCLSHIM_API int nclshim_server_subscribe(const void *handle);
/**
 * 注册一个工具：方法表与路径绑定都用 JSON 描述——
 *
 *   methods_json:  [{"name":"getValue"},{"name":"setValue","schema":{...}}]
 *   bindings_json: [{"path":"/STATUS","operation":0,"method":"getValue"}]（可为 NULL）
 *
 * host 是托管侧给的两格 [工具回调, 用户数据]，和采样/事件回调一个约定；回调的
 * 生命周期必须覆盖到 nclshim_server_free()。一个工具最多 32 个方法。
 */
NCLSHIM_API int nclshim_server_register_tool(const void *handle, const char *tool_name,
                                             const char *methods_json,
                                             const char *bindings_json, void *host);
NCLSHIM_API int nclshim_server_register_builtin_tool(const void *handle);
NCLSHIM_API int nclshim_server_register_file_tool(const void *handle);
NCLSHIM_API int nclshim_server_start_ftp(const void *handle);
/**
 * 离线驱动一条请求：payload 是原始报文体（不必 NUL 结尾），返回应答报文的 JSON
 * 文本（malloc，调用方释放）。**不经过 MQTT**，也不发布应答 —— 单测与"自己当
 * 传输"的宿主用它。
 */
NCLSHIM_API int nclshim_server_dispatch(const void *handle, const char *topic,
                                        const void *payload, int payload_len,
                                        char **out_json);
NCLSHIM_API int nclshim_server_invoke_method_call(const void *handle,
                                                  const char *method,
                                                  const char *params_json,
                                                  char **out_json);
NCLSHIM_API int nclshim_server_check_method_call(const void *handle,
                                                 const char *method,
                                                 const char *params_json,
                                                 char **out_json);
NCLSHIM_API int nclshim_server_init_samples(const void *handle);
/** 运行时加一个采样通道（config_json 是一个 SAMPLE_CHANNEL 配置节点）。 */
NCLSHIM_API int nclshim_server_add_sample(const void *handle, const char *config_json);
NCLSHIM_API int nclshim_server_remove_sample(const void *handle, const char *id);
NCLSHIM_API void nclshim_server_stop_all_samples(const void *handle);
/** 推一条事件到 Event/<sn>；event_json 形如 {"key":...,"value":...}。 */
NCLSHIM_API int nclshim_server_push_event(const void *handle, const char *event_id,
                                          const char *event_json);
NCLSHIM_API int nclshim_server_push_event_ex(const void *handle, const char *event_id,
                                             const char *event_json,
                                             long long time_ms,
                                             const char *message_id);