bindings/csharp/src/Nclink.Core/Native.cs


        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_header")]
        internal static extern IntPtr SampleHeader(IntPtr msg, byte[] separator);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_column_slots")]
        internal static extern int SampleColumnSlots(IntPtr msg, int col);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_column_points")]
        internal static extern int SampleColumnPoints(IntPtr msg, int col);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_column_nested")]
        internal static extern int SampleColumnNested(IntPtr msg, int col);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_column_encoding")]
        internal static extern IntPtr SampleColumnEncoding(IntPtr msg, int col);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_value_at")]
        internal static extern IntPtr SampleValueAt(IntPtr msg, int row, int col);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_sample_column_value_at")]
        internal static extern IntPtr SampleColumnValueAt(IntPtr msg, int col, int index);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_event_id")]
        internal static extern IntPtr EventId(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_event_time")]
        internal static extern IntPtr EventTime(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_event_key")]
        internal static extern IntPtr EventKey(IntPtr msg);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_event_value")]
        internal static extern IntPtr EventValue(IntPtr msg);

        /* ------------------------------------------------------------ client -- */

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_open")]
        internal static extern int Open(byte[] uri, byte[] user, byte[] password);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_close")]
        internal static extern void Close();

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_is_open")]
        internal static extern int IsOpen();

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_get")]
        internal static extern IntPtr ClientGet(byte[] sn);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_probe")]
        internal static extern int ClientProbe(IntPtr client, uint timeoutMs, out IntPtr model);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_get_value")]
        internal static extern int ClientGetValue(IntPtr client, byte[] path, uint timeoutMs, out IntPtr value);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_get_value_range")]
        internal static extern int ClientGetValueRange(IntPtr client, byte[] path, int start, int end, uint timeoutMs, out IntPtr value);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_get_length")]
        internal static extern int ClientGetLength(IntPtr client, byte[] path, uint timeoutMs, out long length);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_set_value")]
        internal static extern int ClientSetValue(IntPtr client, byte[] path, byte[] valueJson, uint timeoutMs);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_set_value_index")]
        internal static extern int ClientSetValueIndex(IntPtr client, byte[] path, byte[] valueJson, int index, uint timeoutMs);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_method_call")]
        internal static extern int ClientMethodCall(IntPtr client, byte[] method, byte[] paramsJson, int check, uint timeoutMs, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_ping")]
        internal static extern int ClientPing(IntPtr client, uint timeoutMs);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_get_id")]
        internal static extern IntPtr ClientGetId(IntPtr client, byte[] path);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_get_path")]
        internal static extern IntPtr ClientGetPath(IntPtr client, byte[] id);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_subscribe_samples")]
        internal static extern int ClientSubscribeSamples(IntPtr client, int qos, IntPtr host);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_unsubscribe_samples")]
        internal static extern int ClientUnsubscribeSamples(IntPtr client);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_subscribe_events")]
        internal static extern int ClientSubscribeEvents(IntPtr client, int qos, IntPtr host);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_unsubscribe_events")]
        internal static extern int ClientUnsubscribeEvents(IntPtr client);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_sample_count")]
        internal static extern int ClientSampleCount(IntPtr client);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_event_count")]
        internal static extern int ClientEventCount(IntPtr client);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_add_sample")]
        internal static extern int ClientAddSample(IntPtr client, byte[] configJson, uint timeoutMs);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_client_remove_sample")]
        internal static extern int ClientRemoveSample(IntPtr client, byte[] id, uint timeoutMs);

        /* ------------------------------------------------------------ server -- */

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_create")]
        internal static extern IntPtr ServerCreate(byte[] sn, byte[] modelJson, byte[] broker, byte[] username, byte[] password, IntPtr publishHost);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_free")]
        internal static extern void ServerFree(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_sn")]
        internal static extern IntPtr ServerSn(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_model")]
        internal static extern IntPtr ServerModel(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_model_json")]
        internal static extern IntPtr ServerModelJson(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_openapi_json")]
        internal static extern IntPtr ServerOpenapiJson(IntPtr handle, byte[] baseUrl);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_binding_count")]
        internal static extern int ServerBindingCount(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_operation_count")]
        internal static extern int ServerOperationCount(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_sample_count")]
        internal static extern int ServerSampleCount(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_sample_upload_count")]
        internal static extern int ServerSampleUploadCount(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_event_count")]
        internal static extern int ServerEventCount(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_subscribe")]
        internal static extern int ServerSubscribe(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_register_tool")]
        internal static extern int ServerRegisterTool(IntPtr handle, byte[] tool, byte[] methodsJson, byte[] bindingsJson, IntPtr host);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_register_builtin_tool")]
        internal static extern int ServerRegisterBuiltinTool(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_register_file_tool")]
        internal static extern int ServerRegisterFileTool(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_start_ftp")]
        internal static extern int ServerStartFtp(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_dispatch")]
        internal static extern int ServerDispatch(IntPtr handle, byte[] topic, byte[] payload, int payloadLen, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_invoke_method_call")]
        internal static extern int ServerInvokeMethodCall(IntPtr handle, byte[] method, byte[] paramsJson, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_check_method_call")]
        internal static extern int ServerCheckMethodCall(IntPtr handle, byte[] method, byte[] paramsJson, out IntPtr responseJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_init_samples")]
        internal static extern int ServerInitSamples(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_add_sample")]
        internal static extern int ServerAddSample(IntPtr handle, byte[] configJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_remove_sample")]
        internal static extern int ServerRemoveSample(IntPtr handle, byte[] id);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_stop_all_samples")]
        internal static extern void ServerStopAllSamples(IntPtr handle);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_push_event")]
        internal static extern int ServerPushEvent(IntPtr handle, byte[] eventId, byte[] eventJson);

        [DllImport(Dll, CallingConvention = CallingConvention.Cdecl, EntryPoint = "nclshim_server_push_event_ex")]
        internal static extern int ServerPushEventEx(IntPtr handle, byte[] eventId, byte[] eventJson, long timeMs, byte[] messageId);

        /* -------------------------------------------------------------- http -- */
